# pylansforsakringar

./: .gitignore  LICENSE.md  README.md  lansforsakringar.py  pyproject.toml  test_all.py
.github/workflows/: main.yaml
